[gd_scene load_steps=6 format=2]

[ext_resource path="res://m5x7.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ui_theme.tres" type="Theme" id=2]
[ext_resource path="res://ChallengeScreen.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=2]

[node name="ChallengeScreen" type="Node2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 2 )

[node name="Bg" type="ColorRect" parent="Control"]
margin_left = -8.0
margin_top = -8.0
margin_right = 264.0
margin_bottom = 152.0
color = Color( 0.258824, 0.129412, 0.211765, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Title" type="Label" parent="Control"]
margin_left = 64.0
margin_top = 8.0
margin_right = 192.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 1 )
text = "DAILY CHALLENGE"
align = 1

[node name="MessageLabel" type="Label" parent="Control"]
margin_top = 64.0
margin_right = 256.0
margin_bottom = 91.0
text = "Loading..."
align = 1

[node name="SeedLabel" type="Label" parent="Control"]
margin_top = 32.0
margin_right = 256.0
margin_bottom = 59.0
text = "Today's seed: 123456789"
align = 1

[node name="StartButton" type="Button" parent="Control"]
margin_left = 80.0
margin_top = 96.0
margin_right = 168.0
margin_bottom = 114.0
rect_min_size = Vector2( 88, 18 )
custom_styles/disabled = SubResource( 2 )
text = "Start"

[node name="BackButton" type="Button" parent="Control"]
margin_left = 80.0
margin_top = 120.0
margin_right = 168.0
margin_bottom = 138.0
rect_min_size = Vector2( 88, 18 )
custom_styles/disabled = SubResource( 2 )
text = "Back"

[connection signal="pressed" from="Control/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="Control/BackButton" to="." method="_on_BackButton_pressed"]
